February 22, 2005
    - Added/debugged classes to TCL++ that make it easy to
      do variable tracing (TCLTracedVariable, and VariableTraceCallbac e.g.).
    - Added stuff to SpecTcl that allows it to pull stuff out of string list
      buffers that represent TCL scriptlets and execute those scripts. this
      is currently useful to reconstruct control system data and other stuff
      that may be in statevariable and runvariable buffers which look like
      a bunch of set varname value commands.
    - Fix 1/0 month counting problem with run control timestamps in 
      Analysis library.
February 25, 2005
   - Documented the variable tracing support.
   - Documented run/state variable recovery.
March 4, 2005
   - Set the version string to 3.0pre1
March 8, 2005
   - Move the event sink pipeline class into Events and out of 
     the Filter directory.
   - Add SpecTcl API (tested) to the build and cvs.
March 17, 2005
   - Add documentation for the SpecTcl api as a spectcl man page.
March 21, 2005
   - Added -fno-elide-constructors to user's makefile to ensure that 
     TreeParameter construction is handled correctly.
   - Support settable I/O poll dwell time.
April 15, 2005
   - Began integrating a rewritten treeparameter into the software.
April 16, 2005
   - In contrib/calibparam : add a random number in [-.5, .5] to the
     input of the calibration under the assumption that the input is
     integer and therefore needs to be turned into a real.
April 18, 2005
   - Added documentation to the treeparamter package.
April 19, 2005
   - Fix up a tcl 8.4 dependency in CTreeVariableProperties.cpp
April 21, 2005
   - Fix up coordinate transform problems in Xamine with grobj locations.
     Scaled wrong and offset wrong.
   - Make it a bit clearer that the Treeparameter GUI version is decoupled
     from SpecTcl's version... for now.
April 22, 2005
   - Remove nulls from Xamine's log files and replace them with \n's instead.